# open-nvidia-smi

./: pyproject.toml  requirements.txt  view.py
nvsmi/: cli.py  nvml.py  utils.py
nvsmi/cli/: main.py
nvsmi/cli/commands/: nvlink.py  summary.py
nvsmi/commands/: summary.py
nvsmi/formatter/text/: summary.py
nvsmi/models/: models.py
